--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -208,6 +208,7 @@
     </FrameLayout>
 
 
+
     <FrameLayout
         android:id="@+id/frame_bottombar"
         android:layout_width="match_parent"
@@ -234,7 +235,7 @@
                 app:scale_left="0"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_home"/>
+                app:srcCompat="@drawable/home_lined"/>
             <ImageButton
                 android:id="@+id/bottombar_bookmark"
                 android:layout_width="match_parent"
@@ -245,7 +246,7 @@
                 app:scale_left="100"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_bookmark" />
+                app:srcCompat="@drawable/bookmark_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_mypage"
@@ -257,7 +258,7 @@
                 app:scale_left="200"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_mypage" />
+                app:srcCompat="@drawable/mypage_filled" />
 
             <ImageButton
                 android:id="@+id/bottombar_info"
@@ -269,11 +270,12 @@
                 app:scale_left="300"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_info" />
+                app:srcCompat="@drawable/info_lined" />
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
 
     </FrameLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
