--- a/app/src/main/res/layout/item_after_search_2.xml
+++ b/app/src/main/res/layout/item_after_search_2.xml
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/aqua_background_round_sharp"
-                android:text="# 해시태그  "
+                android:text="# 해시태그  # 해시태그  # 해시태그 "
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/darker_gray"
@@ -95,23 +95,12 @@
                 app:scale_left="28"
                 app:scale_textsize="4"
                 app:scale_top="40.5"
-                app:scale_width="49"
+                app:scale_width="67"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:gravity="center_vertical"/>
 
 
-            <ImageView
-                android:id="@+id/tag_more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/aqua_background_round_sharp"
-                android:scaleType="center"
-                android:src="@drawable/etc_35"
-                app:scale_height="9"
-                app:scale_left="80"
-                app:scale_top="40.5"
-                app:scale_width="15" />
             <ImageButton
                 android:id="@+id/heart"
                 android:layout_width="wrap_content"
