--- a/app/src/main/res/layout/activity_main_2_1.xml
+++ b/app/src/main/res/layout/activity_main_2_1.xml
@@ -502,6 +502,7 @@
     </FrameLayout>
     </LinearLayout>
 
+
     <FrameLayout
         android:id="@+id/frame_bottombar"
         android:layout_width="match_parent"
@@ -528,7 +529,7 @@
                 app:scale_left="0"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_home"/>
+                app:srcCompat="@drawable/home_filled"/>
             <ImageButton
                 android:id="@+id/bottombar_bookmark"
                 android:layout_width="match_parent"
@@ -539,7 +540,7 @@
                 app:scale_left="100"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_bookmark" />
+                app:srcCompat="@drawable/bookmark_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_mypage"
@@ -551,7 +552,7 @@
                 app:scale_left="200"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_mypage" />
+                app:srcCompat="@drawable/mypage_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_info"
@@ -563,10 +564,11 @@
                 app:scale_left="300"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_info" />
+                app:srcCompat="@drawable/info_lined" />
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
 
     </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
