--- a/app/src/main/res/layout/activity_search_2.xml
+++ b/app/src/main/res/layout/activity_search_2.xml
@@ -181,6 +181,7 @@
 
     </LinearLayout>
 
+
     <FrameLayout
         android:id="@+id/frame_bottombar"
         android:layout_width="match_parent"
@@ -207,7 +208,7 @@
                 app:scale_left="0"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_home"/>
+                app:srcCompat="@drawable/home_lined"/>
             <ImageButton
                 android:id="@+id/bottombar_bookmark"
                 android:layout_width="match_parent"
@@ -218,7 +219,7 @@
                 app:scale_left="100"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_bookmark" />
+                app:srcCompat="@drawable/bookmark_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_mypage"
@@ -230,7 +231,7 @@
                 app:scale_left="200"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_mypage" />
+                app:srcCompat="@drawable/mypage_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_info"
@@ -242,11 +243,12 @@
                 app:scale_left="300"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_info" />
+                app:srcCompat="@drawable/info_lined" />
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
 
     </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
