--- a/app/src/main/res/layout/activity_termslist.xml
+++ b/app/src/main/res/layout/activity_termslist.xml
@@ -110,6 +110,7 @@
 
     </LinearLayout>
 
+
     <FrameLayout
         android:id="@+id/frame_bottombar"
         android:layout_width="match_parent"
@@ -136,7 +137,7 @@
                 app:scale_left="0"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_home"/>
+                app:srcCompat="@drawable/home_lined"/>
             <ImageButton
                 android:id="@+id/bottombar_bookmark"
                 android:layout_width="match_parent"
@@ -147,7 +148,7 @@
                 app:scale_left="100"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_bookmark" />
+                app:srcCompat="@drawable/bookmark_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_mypage"
@@ -159,7 +160,7 @@
                 app:scale_left="200"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_mypage" />
+                app:srcCompat="@drawable/mypage_lined" />
 
             <ImageButton
                 android:id="@+id/bottombar_info"
@@ -171,10 +172,11 @@
                 app:scale_left="300"
                 app:scale_top="1"
                 app:scale_width="100"
-                app:srcCompat="@drawable/button_info" />
+                app:srcCompat="@drawable/info_lined" />
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
 
     </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
